--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ footer {
 nav ul {
   list-style: none;
   padding: 1em;
+  flex:right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 nav a:link, nav a:visited {
   color: #D0D0D0;
