--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
   color: #444;
   font-size: 16px;
-  font-family: 'Gentium Book Basic', sans-serif;
+  font-family: 'Gentium Book Basic', serif;
 }
 p {
   margin-bottom: .67em;
@@ -19,7 +19,6 @@ footer {
 nav ul {
   list-style: none;
   padding: 1em;
-  flex:right;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,6 +39,8 @@ header {
   width: 510px;
   margin-top: 2em;
   margin-bottom: 2em;
+  margin-left: auto;
+  margin-right: auto;
 }
 header img {
   width: 100%;
@@ -48,19 +49,28 @@ header img {
 header h1 {
   margin: 0 auto;
   padding: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .small {
   margin-top: 1em;
+  font-weight: 900;
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 /*-- Article Styles--*/
 article {
   width: 768px;
   font-size: 18px;
   line-height: 1.3;
+  margin-left: auto;
+  margin-right: auto;
 }
 article figure {
   width: 39%;
   margin: 0 0 1.25em 1.25em;
+  float: right;
 }
 article figcaption {
 }
