--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,7 @@ header img {
 header h1 {
   margin: 0 auto;
   padding: 0 auto;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 .small {
   margin-top: 1em;
